[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pipeline-repair-env"
version = "1.0.0"
description = "OpenEnv environment for AI-driven data pipeline repair"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "data-cleaning", "etl", "pipeline"]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.7.4",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "openai==1.40.0",
    "requests==2.32.3",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks*", "graders*"]

[project.scripts]
serve = "server:app"
