[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline-repair-env"
version = "1.0.0"
description = "OpenEnv environment for AI-driven data pipeline repair"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "data-cleaning", "etl", "pipeline"]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.7.4",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "openai==1.40.0",
    "requests==2.32.3",
    "PyYAML==6.0.2",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
serve = "uvicorn:main"
start-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["tasks", "graders", "server"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
